--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                         Делимся опытом
                     </h2>
                     <div class="benefits__descr">
-                        Наши сотрудники всегда готовы<br> поделиться своим опытом,<br> так как сами бегают полумарафоны,<br> переплыли Босфор, готовятся к<br> соревнованиям по триатлону! 
+                        Наши сотрудники всегда готовы поделиться своим опытом так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону! 
                     </div>
                 </div>
                 <div class="benefits__block">
@@ -69,7 +69,7 @@
                         Заботимся о здоровье
                     </h2>
                     <div class="benefits__descr">
-                        Мы работаем для того,<br> чтобы Ваши занятия спортом шли на<br> пользу Вашему здоровью и были в<br> радость Вам и Вашим близким!
+                        Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
                     </div>
                 </div>
                 <div class="benefits__block">
@@ -78,7 +78,7 @@
                         Учим бегать
                     </h2>
                     <div class="benefits__descr">
-                        Помогаем с обучением<br> правильной технике бега!<br> Дружим с крупнейшей школой бега в<br> России - <a href="#">I LOVE RUNNING.</a>
+                        Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в<br> России - <a href="#">I LOVE RUNNING.</a>
                     </div>
                 </div>
             </div>
