--- a/src/index.html
+++ b/src/index.html
@@ -48,41 +48,52 @@
         </div>
     </div>
 
-    <section class="benefits">
+    <div class="benefits">
         <div class="container">
-            <h1 class="benefits__header">
+            <h2 class="title">
                 НАШИ ПРЕИМУЩЕСТВА
-            </h1>
+            </h2>
             <div class="benefits__wrapper">
                 <div class="benefits__block">
                     <img src="icons/cup.png" alt="cup">
-                    <h2 class="benefits__subheader">
+                    <div class="benefits__subheader">
                         Делимся опытом
-                    </h2>
+                    </div>
                     <div class="benefits__descr">
                         Наши сотрудники всегда готовы поделиться своим опытом так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону! 
                     </div>
                 </div>
                 <div class="benefits__block">
                     <img src="icons/heart.png" alt="heart">
-                    <h2 class="benefits__subheader">
+                    <div class="benefits__subheader">
                         Заботимся о здоровье
-                    </h2>
+                    </div>
                     <div class="benefits__descr">
                         Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
                     </div>
                 </div>
                 <div class="benefits__block">
                     <img src="icons/shoe.png" alt="shoe">
-                    <h2 class="benefits__subheader">
+                    <div class="benefits__subheader">
                         Учим бегать
-                    </h2>
+                    </div>
                     <div class="benefits__descr">
-                        Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в<br> России - <a href="#">I LOVE RUNNING.</a>
+                        Помогаем с обучением правильной технике бега!<br> Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию<br> по подбору пульсометра 
+            </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки<br> и мы перезвоним вам в течении 10 минут
+            </div>
+        </div>
+    </div>
 </body>
 </html>
