--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,13 @@
             <div class="consultation__descr">
                 Просто заполните форму заявки<br> и мы перезвоним вам в течении 10 минут
             </div>
+            <form class="feed-form" action="">
+                <input required placeholder="Ваше имя" type="text">
+                <input required placeholder="Ваш телефон" type="tel">
+                <input required placeholder="Ваш E-mail" type="email">
+
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </div>
 </body>
