--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+    <!-- <link rel="stylesheet" href="css/slick.css"> -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -110,13 +111,16 @@
                 <div><img src="img/slide_1.jpg" alt="slide_1"></div>
                 <div><img src="img/slide_2.jpg" alt="slide_2"></div>
                 <div><img src="img/slide_3.jpg" alt="slide_3"></div>
-              </div>
+            </div>
+            <button type="button" class="prev"><img src="icons/left_arrow.svg"></img></button>
+            <button type="button" class="next"><img src="icons/right_arrow.svg"></img></button>
         </div>
     </section>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js/slick.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
