add styles for nav(dots) into .carousel; add responsive-option to slider in script.js, add .carousel into media.scss

--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,10 @@
                 <div><img src="img/slide_2.jpg" alt="slide_2"></div>
                 <div><img src="img/slide_3.jpg" alt="slide_3"></div>
             </div>
-            <button type="button" class="prev"><img src="icons/left_arrow.svg"></img></button>
-            <button type="button" class="next"><img src="icons/right_arrow.svg"></img></button>
+            <button type="button" class="prev">
+                <img src="icons/left_arrow.svg"></img></button>
+            <button type="button" class="next">
+                <img src="icons/right_arrow.svg"></img></button>
         </div>
     </section>
 
