add catalog into media

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button">
+                    <button class="button button_call">
                         заказать звонок
                     </button>
                 </div>
@@ -45,7 +45,7 @@
                     заказать кОНСУЛЬТАЦИЮ
                 </button>
                 <div class="promo__link">или
-                    <a href="#"> ПЕРЕЙТИ В КАТАЛОГ</a></div>
+                    <a href="#catalog"> ПЕРЕЙТИ В КАТАЛОГ</a></div>
             </div>
         </div>
     </section>
@@ -119,7 +119,7 @@
         </div>
     </section>
 
-    <section class="catalog">
+    <section class="catalog" id="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>
             <ul class="catalog__tabs">
