--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,7 @@
             <h2 class="title">отзывы клиентов</h2>
             <div class="feedback__wrapper">
                 <div class="feedback-item">
-                    <img src="img/feedback_1.jpg" alt="feedback">
+                    <img class="feedback-item__img" src="img/feedback_1.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Ирина Иванченко</div>
                         <div class="feedback-item__achievement">2 полумарафона</div>
@@ -381,7 +381,7 @@
                     </div>
                 </div>
                 <div class="feedback-item">
-                    <img src="img/feedback_2.jpg" alt="feedback">
+                    <img class="feedback-item__img" src="img/feedback_2.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Иван Сёмочкин</div>
                         <div class="feedback-item__achievement">1 полумарафон</div>
@@ -393,7 +393,7 @@
                     </div>
                 </div>
                 <div class="feedback-item">
-                    <img src="img/feedback_3.jpg" alt="feedback">
+                    <img class="feedback-item__img" src="img/feedback_3.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Юлия Дашкина</div>
                         <div class="feedback-item__achievement">2 полумарафона</div>
