add script for modals

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button button_call">
+                    <button data-modal="consultation" class="button button_call">
                         заказать звонок
                     </button>
                 </div>
@@ -41,7 +41,7 @@
                     <div class="promo__icon">
                         <img src="icons/messages.png" alt="messages">Ответим<br> на все вопросы</div>
                 </div>
-                <button class="button button_main">
+                <button data-modal="consultation" class="button button_main">
                     заказать кОНСУЛЬТАЦИЮ
                 </button>
                 <div class="promo__link">или
