--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             </h2>
             <div class="benefits__wrapper">
                 <div class="benefits__block">
-                    <img src="icons/cup.png" alt="cup">
+                    <img src="icons/cup.png" alt="cup" class="benefits__icon">
                     <div class="benefits__subheader">
                         Делимся опытом
                     </div>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="benefits__block">
-                    <img src="icons/heart.png" alt="heart">
+                    <img src="icons/heart.png" alt="heart" class="benefits__icon benefits__icon_animated">
                     <div class="benefits__subheader">
                         Заботимся о здоровье
                     </div>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="benefits__block">
-                    <img src="icons/shoe.png" alt="shoe">
+                    <img src="icons/shoe.png" alt="shoe" class="benefits__icon">
                     <div class="benefits__subheader">
                         Учим бегать
                     </div>
