add .pageup into @media

--- a/src/index.html
+++ b/src/index.html
@@ -459,7 +459,7 @@
         </div>
     </div>
 
-    <a href="#up" class="pageup">
+    <a href="#up" class="pageup pageup_footer">
         <img src="icons/circle-chevron-up-solid.svg" alt="up">
     </a>
 
