add animate.css; add wow.min.js; add animations into .feedback-item

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <!-- <link rel="stylesheet" href="css/slick.css"> -->
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -368,7 +369,7 @@
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
             <div class="feedback__wrapper">
-                <div class="feedback-item">
+                <div class="feedback-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay="0s">
                     <img class="feedback-item__img" src="img/feedback_1.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Ирина Иванченко</div>
@@ -380,7 +381,7 @@
                         Спасибо, RunSmart! </div>
                     </div>
                 </div>
-                <div class="feedback-item">
+                <div class="feedback-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay=".2s">
                     <img class="feedback-item__img" src="img/feedback_2.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Иван Сёмочкин</div>
@@ -392,7 +393,7 @@
                         С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
                     </div>
                 </div>
-                <div class="feedback-item">
+                <div class="feedback-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay=".4s">
                     <img class="feedback-item__img" src="img/feedback_3.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Юлия Дашкина</div>
@@ -470,6 +471,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
