--- a/src/index.html
+++ b/src/index.html
@@ -106,9 +106,9 @@
     <div class="carousel">
         <div class="container">
             <div class="carousel__inner">
-                <div><img src="img/slide_1.webp" alt="slide_1"></div>
-                <div><img src="img/slide_2.webp" alt="slide_2"></div>
-                <div><img src="img/slide_3.webp" alt="slide_3"></div>
+                <div><img src="img/slide_1.jpg" alt="slide_1"></div>
+                <div><img src="img/slide_2.jpg" alt="slide_2"></div>
+                <div><img src="img/slide_3.jpg" alt="slide_3"></div>
             </div>
             <button type="button" class="prev">
                 <img src="icons/left_arrow.svg" alt="left_arrow"></button>
@@ -130,7 +130,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -157,7 +157,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -184,7 +184,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -211,7 +211,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -238,7 +238,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -265,7 +265,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -295,7 +295,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -325,7 +325,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -352,7 +352,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/catalog_pulse_1.webp" alt="pulsometr" class="catalog-item__img">
+                            <img src="img/catalog_pulse_1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
@@ -385,7 +385,7 @@
             <h2 class="title">отзывы клиентов</h2>
             <div class="feedback__wrapper">
                 <div class="feedback-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay="0s">
-                    <img class="feedback-item__img" src="img/feedback_1.webp" alt="feedback">
+                    <img class="feedback-item__img" src="img/feedback_1.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Ирина Иванченко</div>
                         <div class="feedback-item__achievement">2 полумарафона</div>
@@ -397,7 +397,7 @@
                     </div>
                 </div>
                 <div class="feedback-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay=".2s">
-                    <img class="feedback-item__img" src="img/feedback_2.webp" alt="feedback">
+                    <img class="feedback-item__img" src="img/feedback_2.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Иван Сёмочкин</div>
                         <div class="feedback-item__achievement">1 полумарафон</div>
@@ -409,7 +409,7 @@
                     </div>
                 </div>
                 <div class="feedback-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay=".3s">
-                    <img class="feedback-item__img" src="img/feedback_3.webp" alt="feedback">
+                    <img class="feedback-item__img" src="img/feedback_3.jpg" alt="feedback">
                     <div class="feedback-item__article">
                         <div class="feedback-item__name">Юлия Дашкина</div>
                         <div class="feedback-item__achievement">2 полумарафона</div>
